# flexargs

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
FlexArgs/: DNFlexArgs.h  DNFlexArgs.m  FlexArgs-Prefix.pch  FlexArgs.1  FlexArgs.h  FlexArgs.m  main.m
FlexArgs.xcodeproj/: project.pbxproj
FlexArgs.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FlexArgs.xcodeproj/project.xcworkspace/xcuserdata/kyle.xcuserdatad/: UserInterfaceState.xcuserstate
FlexArgs.xcodeproj/xcuserdata/kyle.xcuserdatad/xcschemes/: FlexArgs.xcscheme  xcschememanagement.plist
FlexArgsTest/: DNFlexArgsTest.h  DNFlexArgsTest.m  FlexArgsTest-Info.plist  FlexArgsTest-Prefix.pch  FlexArgsTest.h  FlexArgsTest.m
doc/: Makefile.am  flexargs.texi
src/: FlexArgs.h  FlexArgs.m  FlexArgsTests.m  Makefile.am  argtest.m  example.m  flexargs.h  flexargs.m  testrun.m
